# redbase-haskell

./: README.md  redbase.cabal
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/flag-cache/: cereal-0.5.4.0-BsAGxfp8yAs3CiRo2E875e  hashable-1.2.6.0-3EXxoqeEgbfAKr6aGkye6x  hashtables-1.2.1.1-1zZ3KEGcQxJGLU0SHL9vmk  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  redbase-0.1.0.0-2uV9GPb2I8HKICxe4zUNBO  redbase-0.1.0.0-8Jl2tfQn1YPLmbQsXcdBP5  redbase-0.1.0.0-9iZ8aZgef15K1eMl0hX7Pn  redbase-0.1.0.0-C2dO7MDVtVg49ARavOPxU3  redbase-0.1.0.0-FlVzKmFUjPK8GKhemx3jod  redbase-0.1.0.0-HbtF0e2Njw55GQaCsVoec9  string-conversions-0.4.0.1-5bhARACLQyXG4DLNegoSj4  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR  utf8-string-1.0.1.1-1DpjxLeTvGg7ttZZojxJR5  vector-0.11.0.0-LMwQhhnXj8U3T5Bm1JFxG  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/lib/x86_64-linux-ghc-8.0.2/redbase-0.1.0.0-2uV9GPb2I8HKICxe4zUNBO/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/lib/x86_64-linux-ghc-8.0.2/redbase-0.1.0.0-8Jl2tfQn1YPLmbQsXcdBP5/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/lib/x86_64-linux-ghc-8.0.2/redbase-0.1.0.0-9iZ8aZgef15K1eMl0hX7Pn/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/lib/x86_64-linux-ghc-8.0.2/redbase-0.1.0.0-C2dO7MDVtVg49ARavOPxU3/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/lib/x86_64-linux-ghc-8.0.2/redbase-0.1.0.0-HbtF0e2Njw55GQaCsVoec9/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.19/8.0.2/pkgdb/: package.cache  redbase-0.1.0.0-FlVzKmFUjPK8GKhemx3jod.conf
app/: Main.hs
src/PageFiles/: Buffer.hs  File.hs  Page.hs
src/Utilities/: Config.hs  Errors.hs
test/: Spec.hs
(+40 files in other folders)
